--- a/pages/about.html
+++ b/pages/about.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>About</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="img/teschio.ico" type="image/x-icon">
-    <script type="module" src="./js/pages_script/createHomepage.mjs" defer></script>
+    <script type="module" src="../js/pages_script/createAbout.mjs" defer></script>
 </head>
 <body>    
 </body>
