--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="img/teschio.ico" type="image/x-icon">
     <script type="module" src="../js/pages_script/createContact.mjs" defer></script>
 </head>
